# portalz-integrator

./: .gitignore  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: main.yaml
configuration/: base.yaml  local.yaml
src/: configuration.rs  database.rs  main.rs  models.rs  rabbitmq.rs
