[package]
name = "portalz-integrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
config = "0.13.2"
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4.17"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.147"
serde-aux = "4.0.0"
serde_json = "1.0.73"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }